--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,15 @@
 language: go
 go:
-  - '1.2'
-  - '1.3'
-  - '1.4'
-  - '1.5'
-  - '1.6'
-  - '1.7'
-  - '1.8'
-  - '1.9'
   - '1.10'
-  - 'master'
 
 sudo: false
 
 before_install:
-  - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
   - go get github.com/sahilm/fuzzy
 
 script:
   - go build main.go
-  - go test -v ./...
-  - $HOME/gopath/bin/goveralls -service=travis-ci -v -package .
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
