--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_install:
   - go get github.com/sahilm/fuzzy
 
 script:
-  - go build main.go
+  - go build github.com/tvytlx/autojump-go
   - go test -v -covermode=count -coverprofile=coverage.out
   - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci
